// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/branch/commit commitFilesToBranch commits files 1`] = `
[
  [
    {
      "branchName": "renovate/some-branch",
      "files": [
        {
          "contents": "some contents",
          "path": "package.json",
          "type": "addition",
        },
      ],
      "force": false,
      "message": "some commit message",
      "platformCommit": false,
    },
  ],
]
`;

exports[`workers/repository/update/branch/commit commitFilesToBranch commits via platform 1`] = `
[
  [
    {
      "branchName": "renovate/some-branch",
      "files": [
        {
          "contents": "some contents",
          "path": "package.json",
          "type": "addition",
        },
      ],
      "force": false,
      "message": "some commit message",
      "platformCommit": true,
    },
  ],
]
`;
